# mufc_fan_club_tg_bot

./: .env.example  .gitignore  Dockerfile  README.md  base_sql.sql  check_black.py  docker-compose.yml  pyproject.toml
.github/workflows/: black.yml
sources/: docker-compose.yaml  enums.py  main.py
sources/callback_factory/: callback_factory.py
sources/config/: config.py
sources/connector/: kzn_reds_pg_connector.py
sources/context/: enums.py
sources/database/models/: base_model.py  models.py
sources/functions/: admin_checker.py  kzn_reds_pg_manager.py  match_day_manager.py  meeting_invites_manager.py  schema_converter.py  schema_convertion_function.py  season_matches_manager.py  user_role_manager.py
sources/functions/helpers/: watch_day_helper.py
sources/handlers/: add_match_day_handler.py  main_handler.py  poll_task_handler.py  watch_day_handler.py
sources/keyboards/: admin_keyboard.py  keyboard_generator.py  main_keyboard.py  match_day_keyboard.py  meeting_approvement_keyboard.py  watch_day_keyboard.py
sources/lexicon/: BASE_LEXICON_RU.py  MATCH_DAY_ADDING_LEXICON_RU.py  WATCH_DAY_LEXICON_RU.py  admin_lexicon_ru.py  base_lexicon_ru.py  button_lexicon_ru.py  calendar_lexicon_ru.py  customer_lexicon_ru.py  user_registration_lexicon.py  watch_day_lexicon_ru.py
sources/schemes/: matchday_dto.py  matchday_schema.py  scheme.py  user_role_schema.py
sources/services/: match_invitor_service.py
sources/states/: create_place_state.py  main_states.py  user_registration_state.py
sources/tools/: enums.py  helpers.py  singleton.py
(+9 files in other folders)
